// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliases are parseable: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [
            {
              "$type": "Membership",
              "annotations": [
                {
                  "$type": "Annotation",
                  "annotations": [],
                  "chains": [],
                  "element": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                    "prefixes": [],
                  },
                  "elements": [],
                  "prefixes": [],
                },
              ],
              "chains": [],
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "aliases": [],
                      "annotatingMembers": [],
                      "declaredName": "B",
                      "filters": [],
                      "imports": [],
                      "isSufficient": false,
                      "members": [],
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "annotations": [],
              "chains": [],
              "declaredName": "D",
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "aliases": [],
                      "annotatingMembers": [],
                      "declaredName": "B",
                      "filters": [],
                      "imports": [],
                      "isSufficient": false,
                      "members": [],
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "annotatingMembers": [],
          "declaredName": "N1",
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Class",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "A",
                "filters": [],
                "imports": [],
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Class",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "B",
                "filters": [],
                "imports": [],
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`all top-level elements are in the root namespace: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Documentation",
          "about": [],
          "body": "/* root doc */",
          "prefixes": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "filters": [],
    "imports": [],
    "members": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Feature",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "f",
          "filters": [],
          "imports": [],
          "isNonunique": false,
          "isOrdered": false,
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [
            {
              "$type": "FeatureTyping",
              "annotations": [],
              "chains": [],
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "TypeReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "aliases": [],
                      "annotatingMembers": [],
                      "declaredName": "C",
                      "filters": [],
                      "imports": [],
                      "isSufficient": false,
                      "members": [],
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "A",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "C",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "DataType",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "D",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Package",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "P",
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`namespace elements can have visibility: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "N",
          "filters": [],
          "imports": [],
          "members": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Feature",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "f",
                "filters": [],
                "imports": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [
                  {
                    "$type": "FeatureTyping",
                    "annotations": [],
                    "chains": [],
                    "elements": [],
                    "prefixes": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "aliases": [],
                            "annotatingMembers": [],
                            "declaredName": "C",
                            "filters": [],
                            "imports": [],
                            "isSufficient": false,
                            "members": [],
                            "namespaceMembers": [],
                            "prefixes": [],
                            "relationshipMembers": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
              },
              "elements": [],
              "prefixes": [],
              "visibility": "protected",
            },
          ],
          "namespaceMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Class",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "C",
                "filters": [],
                "imports": [],
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
              "visibility": "public",
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "DataType",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "D",
                "filters": [],
                "imports": [],
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
              "visibility": "private",
            },
          ],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`namespaces are parseable: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "N1",
          "declaredShortName": "'1.1'",
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* This is an example of a namespace body. */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "declaredName": "N2",
          "declaredShortName": "'1.2'",
          "filters": [],
          "imports": [],
          "members": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Feature",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "f",
                "filters": [],
                "imports": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [
                  {
                    "$type": "FeatureTyping",
                    "annotations": [],
                    "chains": [],
                    "elements": [],
                    "prefixes": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "aliases": [],
                            "annotatingMembers": [],
                            "declaredName": "C",
                            "filters": [],
                            "imports": [],
                            "isSufficient": false,
                            "members": [],
                            "namespaceMembers": [],
                            "prefixes": [],
                            "relationshipMembers": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "namespaceMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Class",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "C",
                "filters": [],
                "imports": [],
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "DataType",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "D",
                "filters": [],
                "imports": [],
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Namespace",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "N3",
                "filters": [],
                "imports": [],
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`namespaces can have comments: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Namespace",
          "aliases": [],
          "annotatingMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [
                  {
                    "$type": "Annotation",
                    "annotatedElement": {
                      "$type": "ElementReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "aliases": [],
                            "annotatingMembers": [],
                            "declaredName": "A",
                            "filters": [],
                            "imports": [],
                            "isSufficient": false,
                            "members": [],
                            "namespaceMembers": [],
                            "prefixes": [],
                            "relationshipMembers": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                    "annotations": [],
                    "chains": [],
                    "elements": [],
                    "prefixes": [],
                  },
                ],
                "body": "/* comment about A */",
                "declaredName": "Comment1",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment about N9 */",
                "declaredName": "Comment2",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* also comment about N9 */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* doc about N9 */",
                "declaredName": "N9_Doc",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "declaredName": "N9",
          "filters": [],
          "imports": [],
          "members": [],
          "namespaceMembers": [
            {
              "$type": "OwningMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Class",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "A",
                "filters": [],
                "imports": [],
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "prefixes": [],
          "relationshipMembers": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;
